--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "axios": "^0.25.0",
-    "vue": "^2.5.11"
+    "vue": "^2.5.11",
+    "vue-router": "^3.6.5"
   },
   "browserslist": [
     "> 1%",
